--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Recipes</h1>
+<div class="jumbotron align-center">
+	<h1>Welcome to Recipes</h1>
+	<p><%= link_to "Signup", "#", class: "btn btn-primary btn-lg" %>
+</div>
 
