add background image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron align-center">
 	<h1>Welcome to Recipes</h1>
-	<p><%= link_to "Signup", "#", class: "btn btn-primary btn-lg" %>
+	<p><%= link_to "Browse", "#", class: "btn btn-primary btn-lg" %>
 </div>
 
