--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,3 +15,13 @@
 .align-center {
 	text-align: center;
 }
+
+.jumbotron {
+	background-image: asset-url('jumbotron.jpg');
+	background-size: cover;
+
+	h1 {
+		color: #ffffff;
+	}
+}
+
